examples/negative/oneshot/resume_collect_pair.kai
# Negative fixture (#511 / one-shot resume): a handler that
# tries to resume twice and combine the results (collect-pair
# pattern from multi-shot continuation languages). kaikai's
# continuations are one-shot — the second `resume(2)` must
# panic at runtime.

effect Io { ask() : Int }

fn main() : Int {
  handle {
    Io.ask()
  } with Io {
    ask(resume) -> {
      let a = resume(1)
      let b = resume(2)
      a + b
    }
    return(x) -> x
  }
}
